--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ go:
   - 1.9
   - tip
 script:
-  - go test -v ./...
+  - ./test-coverage.sh
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
